<resources>
    <string name="app_name">LearnAssist</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome_message">Welcome to LearnAssist</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="dashboard">Dashboard</string>
    <string name="quiz">Quiz</string>
    <string name="progress">Progress</string>
    <string name="profile">Profile</string>
    <string name="question_text">Generating question…</string>"
    <string name="home">Home</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="math_icon">Math Icon</string>
    <string name="math_quiz">MATHS</string>
    <string name="physics">PHYSICS</string>
    <string name="chemistry">CHEMISTRY</string>
    <string name="biology">BIOLOGY</string>
    <string name="mixture">MIXTURE</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO1</string>
    <string name="todo33">TODO33</string>
    <string name="loading_email">Loading Email...</string>
    <string name="logout">Logout</string>
    <string name="question_goes_here">Question goes here...</string>
    <string name="question_1_5">Question 1/5</string>
    <string name="option_a">Option A</string>
    <string name="option_b">Option B</string>
    <string name="option_c">Option C</string>
    <string name="option_d">Option D</string>
    <string name="congratulations">🎉 Congratulations!</string>
    <string name="you_scored_4_5">You scored 1/5</string>
    <string name="back_to_home">Back to Home</string>
    <string name="level_intermediate">Level: Intermediate</string>
    <string name="math">Math</string>
    <string name="physics1">Physics</string>
    <string name="recommended_for_you">Recommended for You</string>
    <string name="hi_john_doe">Hi, John Doe 👋</string>"

</resources>