<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="12dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardCornerRadius="16dp"
    card_view:cardElevation="6dp"
    android:id="@+id/card_chemistry1"
    android:backgroundTint="@android:color/white">

    <LinearLayout
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"



        >

        <TextView
            android:id="@+id/subjectTitle"
            android:text="@string/chemistry"
            android:textSize="48sp"
            android:textStyle="bold"
            android:textColor="#333" android:layout_height="wrap_content" android:layout_width="wrap_content"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:progress="0"
            android:max="100"
            android:progressDrawable="@drawable/progress_bar_custom"
            android:layout_marginTop="12dp"/>

        <TextView
            android:id="@+id/levelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level_intermediate"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            android:textColor="#666"/>

        <RatingBar
            android:id="@+id/starRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:rating="3"
            android:stepSize="1"
            android:isIndicator="true"
            android:layout_marginTop="4dp"/>

        <ImageView
            android:id="@+id/medalImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_silver_medal"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>
