<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".LoginActivity">


    <EditText
        android:id="@+id/emailLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="308dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="209dp"
        android:autofillHints=""
        android:background="@drawable/email_bg"
        android:elevation="8dp"
        android:gravity="center"
        android:hint="@string/enter_email_id"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="18dp"
        android:textColor="#222222"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/passwordLog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="109dp"


        android:layout_marginEnd="9dp"
        android:layout_marginBottom="87dp"
        android:autofillHints=""
        android:background="@drawable/email_bg"
        android:elevation="8dp"
        android:gravity="center"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="18dp"
        android:textColor="#222222"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/loginBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLog" />

    <ImageView
        android:id="@+id/orb1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="174dp"
        android:layout_marginBottom="102dp"
        android:src="@drawable/orb_purple"
        app:layout_constraintBottom_toTopOf="@+id/orb2"
        app:layout_constraintEnd_toStartOf="@+id/orb11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLog" />

    <ImageView
        android:id="@+id/orb2"
        android:layout_width="40dp"
        android:layout_height="41dp"
        android:layout_margin="20dp"
        android:layout_marginStart="134dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="98dp"
        android:src="@drawable/orb_blue"
        app:layout_constraintBottom_toTopOf="@+id/orb5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/orb1"
        app:layout_constraintTop_toBottomOf="@+id/passwordLog" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="155dp"
        android:layout_marginTop="139dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="607dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLog" />

    <ImageView
        android:id="@+id/orb3"
        android:layout_width="81dp"
        android:layout_height="82dp"
        android:layout_margin="20dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="166dp"
        android:layout_marginBottom="131dp"
        android:src="@drawable/orb_purple"
        app:layout_constraintBottom_toTopOf="@+id/orb9"
        app:layout_constraintEnd_toStartOf="@+id/orb7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orb6" />

    <ImageView
        android:id="@+id/orb4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="137dp"
        android:layout_marginBottom="29dp"
        android:src="@drawable/orb_blue"
        app:layout_constraintBottom_toTopOf="@+id/btnGoToRegister"
        app:layout_constraintEnd_toStartOf="@+id/orb5"
        app:layout_constraintStart_toEndOf="@+id/orb11"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

    <Button
        android:id="@+id/btnGoToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="80dp"
        android:layout_marginTop="97dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="457dp"
        android:text="@string/don_t_have_an_account_register"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/orb5"
        android:layout_width="86dp"
        android:layout_height="98dp"
        android:layout_margin="20dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/orb_purple"
        app:layout_constraintBottom_toTopOf="@+id/btnGoToRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/loginBtn"
        app:layout_constraintTop_toBottomOf="@+id/orb2" />

    <ImageView
        android:id="@+id/orb6"
        android:layout_width="79dp"
        android:layout_height="76dp"
        android:layout_margin="20dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="151dp"
        android:layout_marginBottom="80dp"
        android:src="@drawable/orb_blue"
        app:layout_constraintBottom_toTopOf="@+id/orb3"
        app:layout_constraintEnd_toStartOf="@+id/orb7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGoToRegister" />

    <ImageView
        android:id="@+id/orb7"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:layout_marginStart="126dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="221dp"
        android:src="@drawable/orb_purple"
        app:layout_constraintBottom_toTopOf="@+id/orb8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/orb6"
        app:layout_constraintTop_toBottomOf="@+id/btnGoToRegister" />

    <ImageView
        android:id="@+id/orb8"
        android:layout_width="73dp"
        android:layout_height="77dp"
        android:layout_margin="20dp"
        android:layout_marginStart="87dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="147dp"
        android:layout_marginBottom="104dp"
        android:src="@drawable/orb_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/orb9"
        app:layout_constraintTop_toBottomOf="@+id/orb10" />

    <ImageView
        android:id="@+id/orb9"
        android:layout_width="81dp"
        android:layout_height="82dp"
        android:layout_margin="20dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="138dp"
        android:src="@drawable/orb_purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/orb10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orb3" />

    <ImageView
        android:id="@+id/orb10"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:layout_marginStart="167dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="172dp"
        android:layout_marginBottom="61dp"
        android:src="@drawable/orb_blue"
        app:layout_constraintBottom_toTopOf="@+id/orb8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/orb3"
        app:layout_constraintTop_toBottomOf="@+id/orb7" />

    <ImageView
        android:id="@+id/orb11"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="112dp"
        android:src="@drawable/orb_purple"
        app:layout_constraintBottom_toTopOf="@+id/btnGoToRegister"
        app:layout_constraintEnd_toStartOf="@+id/orb4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orb12" />

    <ImageView
        android:id="@+id/orb12"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="7dp"
        android:src="@drawable/orb_blue"
        app:layout_constraintBottom_toTopOf="@+id/orb2"
        app:layout_constraintEnd_toStartOf="@+id/orb1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orb2" />


</androidx.constraintlayout.widget.ConstraintLayout>