<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <ImageView
        android:id="@+id/orb_b1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="678dp"
        android:src="@drawable/orb_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/orb_b9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput" />


    <ImageView
        android:id="@+id/orb_b2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="267dp"
        android:layout_marginTop="388dp"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="26dp"
        android:src="@drawable/orb_blue"
        app:layout_constraintBottom_toTopOf="@+id/orb_b23"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orb_b6" />

    <ImageView
        android:id="@+id/orb_b3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="94dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="156dp"
        android:src="@drawable/orb_blue"
        app:layout_constraintBottom_toTopOf="@+id/orb_b6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/orb_b9"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput" />


    <ImageView
        android:id="@+id/orb_b4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="87dp"
        android:layout_marginTop="162dp"
        android:layout_marginEnd="274dp"
        android:layout_marginBottom="39dp"
        android:src="@drawable/orb_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orb_b7" />

    <ImageView
        android:id="@+id/orb_b5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="207dp"
        android:layout_marginEnd="336dp"
        android:layout_marginBottom="160dp"
        android:src="@drawable/orb_blue"
        app:layout_constraintBottom_toTopOf="@+id/orb_b34"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

    <ImageView
        android:id="@+id/orb_b6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="309dp"
        android:layout_marginTop="257dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="128dp"
        android:src="@drawable/orb_blue"
        app:layout_constraintBottom_toTopOf="@+id/orb_b65"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

    <ImageView
        android:id="@+id/orb_b7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="375dp"
        android:layout_marginEnd="249dp"
        android:layout_marginBottom="155dp"
        android:src="@drawable/orb_blue"
        app:layout_constraintBottom_toTopOf="@+id/orb_b4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerBtn" />


    <ImageView
        android:id="@+id/orb_b8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="143dp"
        android:layout_marginEnd="181dp"
        android:layout_marginBottom="249dp"
        android:src="@drawable/orb_blue"
        app:layout_constraintBottom_toTopOf="@+id/orb_b23"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerBtn" />


    <ImageView
        android:id="@+id/orb_b9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="31dp"
        android:src="@drawable/orb_purple"
        app:layout_constraintBottom_toTopOf="@+id/registerBtn"
        app:layout_constraintEnd_toStartOf="@+id/orb_b3"
        app:layout_constraintStart_toEndOf="@+id/orb_b1"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput" />


    <ImageView
        android:id="@+id/orb_b23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="223dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="97dp"
        android:src="@drawable/orb_purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orb_b2" />

    <ImageView
        android:id="@+id/orb_b34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="159dp"
        android:layout_marginEnd="171dp"
        android:layout_marginBottom="230dp"
        android:src="@drawable/orb_purple"
        app:layout_constraintBottom_toTopOf="@+id/orb_b4"
        app:layout_constraintEnd_toStartOf="@+id/orb_b65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orb_b5" />

    <ImageView
        android:id="@+id/orb_b65"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="171dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="301dp"
        android:src="@drawable/orb_purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/orb_b34"
        app:layout_constraintTop_toBottomOf="@+id/orb_b6" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="308dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="209dp"
        android:autofillHints=""
        android:background="@drawable/email_bg"
        android:gravity="center"
        android:hint="@string/enter_email_id"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/passwordInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:autofillHints=""
        android:background="@drawable/email_bg"
        android:gravity="center"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/registerBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>